--- a/.classpath
+++ b/.classpath
@@ -1,20 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="Desenvolvimento/src"/>
 	<classpathentry kind="src" path="Exemplos/SQL_JAVA/src"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/commons-collections-3.1.jar"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/hibernate3.jar"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/javassist-3.9.0.GA.jar"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/jta-1.1.jar"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/log4j-1.2.16.jar"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/slf4j-api-1.5.8.jar"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/slf4j-api-1.7.5.jar"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/slf4j-log4j12-1.5.8.jar"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/slf4j-log4j12-1.7.5.jar"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/jdbc-postgresql.jar"/>
-	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/mysql-connector-java-5.1.24-bin.jar"/>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/antlr-2.7.6.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/commons-collections-3.1.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/dom4j-1.6.1.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/hibernate3.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/javassist-3.9.0.GA.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/jta-1.1.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/log4j-1.2.16.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/slf4j-api-1.5.8.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/slf4j-api-1.7.5.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/slf4j-log4j12-1.5.8.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/Hibernate3.5.5/slf4j-log4j12-1.7.5.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/jdbc-postgresql.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Exemplos/SQL_JAVA/Bibliotecas/mysql-connector-java-5.1.24-bin.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="Exemplos/SQL_JAVA/bin"/>
 </classpath>
